# mcp-std-server

./: Cargo.toml  README.md
src/: functions.rs  main.rs
